--- a/client/css/index.css
+++ b/client/css/index.css
@@ -27,3 +27,76 @@ a {
     top: 20px;
     color: red;
 }
+
+
+/* toggle button */
+.info {
+  list-style-type:none;
+  width: 122px;
+  padding:0;
+  position: absolute;
+  left: 50%;
+}
+
+.info li {
+  float:left;
+ width:60px;
+ height:22px;
+ position:relative;
+ text-align: center;
+ line-height: 22px;
+}
+
+.info li label {
+  border-top: 1px black solid;
+  border-bottom: 1px black solid;
+}
+
+.info li.left label{
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  border-left: 1px black solid;
+}
+
+.info li.right label{
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  border-right: 1px black solid;
+}
+
+.info label, .info input {
+ display:block;
+ position:absolute;
+ top:0;
+ left:0;
+ right:0;
+ bottom:0;
+ width: 100%;
+ height: 100%;
+ margin: 0px;
+ padding: 0px;
+}
+
+.info input[type="radio"] {
+ opacity:0.01;
+ z-index:100;
+}
+
+ .info input[type="radio"] + label {
+  background:#aaa;
+  color: black;
+ }
+
+ .info input[type="radio"]:checked + label {
+  background:#222;
+  color: lightgreen;
+ }
+
+.info label {
+  cursor:pointer;
+  z-index:90;
+}
+
+.info label:hover {
+  background:#DDD;
+}
