--- a/client/css/index.css
+++ b/client/css/index.css
@@ -28,6 +28,37 @@ a {
     color: red;
 }
 
+.level-link-container {
+  list-style-type:none;
+  position: absolute;
+  bottom: 20px;
+  width: 100px;
+  right: 20px;
+}
+
+.level-link-container li {
+  float: left;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  font-size: 16px;
+  margin-right: 5px;
+}
+
+.level-link-container li a {
+  text-decoration: none;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: #aaa;
+  border-radius: 3px;
+  color: black;
+}
+
+.level-link-container li a:hover {
+  background-color: #222;
+  color: lightgreen;
+}
 
 /* toggle button */
 .info {
@@ -35,7 +66,7 @@ a {
   width: 122px;
   padding:0;
   position: absolute;
-  left: 50%;
+  left: 45%;
 }
 
 .info li {
