--- a/client/css/index.css
+++ b/client/css/index.css
@@ -10,14 +10,7 @@ body {
   user-select: none;
 }
 
-#info {
-  position: absolute;
-  top: 0px;
-  width: 100%;
-  padding: 5px;
-}
-
-a {
+.level-link, .reset-button {
   color: #a06851;
 }
 
